--- a/css/style.css
+++ b/css/style.css
@@ -262,5 +262,29 @@ h2 img {
     margin-bottom: 15px;
 }
 
+.hover-overlay {
+    /*height: 100vh;*/
+    /*width: 100vw;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+.section-four p.highlight {
+    text-align: center;
+    color: #0086ff;
+    cursor: pointer;
+}
+
+.section-four p.heading-b {
+    font-weight: 600;
+    font-size: 20px;
+    color: #007700;
+    cursor: pointer;
+    padding-top: 5px;
+}
+
 
 
