--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 section {
     /*padding: 25px 0 35px;*/
     padding: 45px 0 35px;
-    background: #fff;
+    /*background: #fff;*/
+    background: #f2f2f2;
 }
 
 footer {
