code for main page cleaned

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ footer {
     text-align: center;
     padding: 0;
     height: 205px;
-    /*height: 235px;*/
     /*-webkit-box-shadow: 0 2px 5px 1px rgba(0,0,0,0.57);*/
     /*-moz-box-shadow: 0 2px 5px 1px rgba(0,0,0,0.57);*/
     /*box-shadow: 0 2px 5px 1px rgba(0,0,0,0.57);*/
@@ -271,7 +270,7 @@ input.submit {
     z-index: 10;
 }
 
-/*For video section*/
+/*For video section - na razie usunięto video pod menu*/
 .fullscreen-bg {
     /*position: fixed;*/
     top: 0;
@@ -284,7 +283,7 @@ input.submit {
 
 .fullscreen-bg__video {
     position: absolute;
-    top: 0;
+    /*top: 0;*/
     top: 100px;
     left: 0;
     width: 100%;
@@ -703,10 +702,10 @@ h2 img {
         padding-top: 10px;
     }
 
-    section {
+    /*section {*/
         /*padding-bottom: 0;*/
         /*padding-top: 0;*/
-    }
+    /*}*/
 
     .popup-window {
         width: 94vw;
@@ -732,50 +731,6 @@ h2 img {
 
 }
 
-
-/*.scroll-in-animation {*/
-    /*opacity: 0;*/
-/*}*/
-
-/*.fadeInRight {*/
-    /*-webkit-animation-name: fadeInRight;*/
-    /*animation-name: fadeInRight;*/
-/*}*/
-
-/*.fadeInLeft {*/
-    /*-webkit-animation-name: fadeInLeft;*/
-    /*animation-name: fadeInLeft;*/
-/*}*/
-
-/*.scroll-animation.fadeInLeft, .scroll-animation.fadeInRight, .scroll-in-animation.fadeInLeft, .scroll-in-animation.fadeInRight {*/
-    /*-webkit-animation-duration: .8s;*/
-    /*-moz-animation-duration: .8s;*/
-    /*-o-animation-duration: .8s;*/
-    /*animation-duration: .8s;*/
-/*}*/
-/*.android-browser-4_3minus .scroll-animation.fadeInLeft, .android-browser-4_3minus .scroll-animation.fadeInRight, .android-browser-4_3minus .scroll-in-animation.fadeInLeft, .android-browser-4_3minus .scroll-in-animation.fadeInRight {*/
-    /*animation-duration: 0s;*/
-    /*-webkit-animation-duration: 0s;*/
-/*}*/
-/*.scroll-in-animation {*/
-    /*opacity: 0;*/
-/*}*/
-/*.scroll-in-animation.css-animation-show {*/
-    /*opacity: 1;*/
-/*}*/
-
-
-/*.animate_image {*/
-    /*margin:0 auto;*/
-    /*width:450px;*/
-    /*height:281px;*/
-    /*transition: background-image 1s ease-in-out;*/
-    /*background-image:url("/img/jeden.jpg");*/
-/*}*/
-
-/*.animate_image:hover {*/
-    /*background-image:url("/img/carnisana-tlo.jpg");*/
-/*}*/
 
 .absolute {
     position: absolute;
