--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #f2f2f2;
 }
 
+
 .parallax-window {
     min-height: 400px;
     background: transparent;
@@ -27,6 +28,7 @@ footer {
     text-align: center;
     padding: 0;
     height: 205px;
+    /*height: 235px;*/
     /*-webkit-box-shadow: 0 2px 5px 1px rgba(0,0,0,0.57);*/
     /*-moz-box-shadow: 0 2px 5px 1px rgba(0,0,0,0.57);*/
     /*box-shadow: 0 2px 5px 1px rgba(0,0,0,0.57);*/
@@ -73,18 +75,6 @@ header {
     line-height: 20px;
 }
 
-.header-background {
-    width: 100vw;
-    position: absolute;
-    /*left: 0;*/
-    /*right: 0;*/
-    margin: 0 auto;
-    /*top:0;*/
-    height: 50px;
-    background-color: black;
-    z-index: -1;
-}
-
 .row-header {
     /* width: 60%; */
     /* margin: 0 auto; */
@@ -92,7 +82,7 @@ header {
     /*width: 1048px;*/
     width: 100%;
     margin: 0 auto;
-    z-index: 101;
+    z-index: 100;
 }
 
 .row-header > ul > li {
@@ -112,10 +102,8 @@ header {
 header .row > ul {
     /*width: 1048px;*/
     /*max-width: 1170px;*/
-    max-width: 1170px;
-    left: 0;
-    right: 0;
     margin: 0 auto;
+    padding: 0;
 }
 
 header li {
@@ -123,7 +111,7 @@ header li {
     cursor: pointer;
 }
 
-li.category > a {
+li.category>a {
     font-weight: bold;
 }
 
@@ -161,7 +149,7 @@ header .submenu {
     /*margin-top: 7px;*/
     /*margin-left: -5px;*/
     margin-top: 0px;
-    margin-left: -9px;
+    margin-left: -10px;
 }
 
 header .shown-submenu {
@@ -243,11 +231,15 @@ span.more:hover {
     color: lightgrey;
 }
 
+
+
 ul.show-subsubmenu, ul.show-submenu {
     display: inherit;
 }
 
+
 /********************/
+
 
 /********************/
 
@@ -279,7 +271,7 @@ input.submit {
     z-index: 10;
 }
 
-/*For video section - na razie usunięto video pod menu*/
+/*For video section*/
 .fullscreen-bg {
     /*position: fixed;*/
     top: 0;
@@ -292,7 +284,7 @@ input.submit {
 
 .fullscreen-bg__video {
     position: absolute;
-    /*top: 0;*/
+    top: 0;
     top: 100px;
     left: 0;
     width: 100%;
@@ -347,6 +339,7 @@ section.section-zero {
 .section-three ul span {
     font-weight: 700;
 }
+
 
 .section-five img.icons8-Facebook-Filled {
     margin-bottom: 10px;
@@ -481,12 +474,15 @@ h2 img {
     max-height: 70vh;
 }
 
+
 .section-five .text-center img:hover {
     background-image: url("../img/carnisana-tlo.jpg");
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
 }
+
+
 
 .section-five p.title {
     text-align: center;
@@ -511,6 +507,7 @@ h2 img {
     cursor: pointer;
 
 }
+
 
 .section-six input, .section-six textarea {
     width: 100%;
@@ -542,6 +539,8 @@ h2 img {
     padding-top: 15px;
 }
 
+
+
 .big-font strong {
     color: #16a085;
 }
@@ -554,9 +553,8 @@ h2 img {
     display: inherit;
 }
 
+
 @media (min-width: 768px) and (max-width: 991px) {
-
-
     .section-five .text-center img {
         /*height: 250px;*/
         height: 30vw;
@@ -571,16 +569,14 @@ h2 img {
 }
 
 @media (max-width: 991px) {
-    header .row-header .menu li {
+    header .row-header .menu >li {
         display: none;
     }
-
 
     .parallax-container {
         /*height: 0px !important;*/
         display: none;
     }
-
     .row-header {
         display: flex !important;
         justify-content: center !important;
@@ -590,10 +586,9 @@ h2 img {
 
     header ul {
         display: table-caption;
-        width: 100%;
+        width:100%;
         /* width: 100%; */
     }
-
     header li {
         /*min-width: 300px;*/
         width: 100%;
@@ -657,7 +652,6 @@ h2 img {
     .diamond {
         display: none;
     }
-
     header ul.submenu {
         position: relative;
     }
@@ -713,16 +707,16 @@ h2 img {
         padding-top: 10px;
     }
 
-    /*section {*/
-    /*padding-bottom: 0;*/
-    /*padding-top: 0;*/
-    /*}*/
+    section {
+        /*padding-bottom: 0;*/
+        /*padding-top: 0;*/
+    }
+
     .popup-window {
         width: 94vw;
         padding: 10px;
         max-height: 550px;
     }
-
     .popup-window p.description {
         font-size: 14px;
         line-height: 18px;
@@ -734,7 +728,6 @@ h2 img {
         margin-top: 4px;
         margin-left: 0;
     }
-
     .subsubmenu {
         position: relative;
         padding-top: 0;
@@ -742,6 +735,51 @@ h2 img {
     }
 
 }
+
+
+/*.scroll-in-animation {*/
+/*opacity: 0;*/
+/*}*/
+
+/*.fadeInRight {*/
+/*-webkit-animation-name: fadeInRight;*/
+/*animation-name: fadeInRight;*/
+/*}*/
+
+/*.fadeInLeft {*/
+/*-webkit-animation-name: fadeInLeft;*/
+/*animation-name: fadeInLeft;*/
+/*}*/
+
+/*.scroll-animation.fadeInLeft, .scroll-animation.fadeInRight, .scroll-in-animation.fadeInLeft, .scroll-in-animation.fadeInRight {*/
+/*-webkit-animation-duration: .8s;*/
+/*-moz-animation-duration: .8s;*/
+/*-o-animation-duration: .8s;*/
+/*animation-duration: .8s;*/
+/*}*/
+/*.android-browser-4_3minus .scroll-animation.fadeInLeft, .android-browser-4_3minus .scroll-animation.fadeInRight, .android-browser-4_3minus .scroll-in-animation.fadeInLeft, .android-browser-4_3minus .scroll-in-animation.fadeInRight {*/
+/*animation-duration: 0s;*/
+/*-webkit-animation-duration: 0s;*/
+/*}*/
+/*.scroll-in-animation {*/
+/*opacity: 0;*/
+/*}*/
+/*.scroll-in-animation.css-animation-show {*/
+/*opacity: 1;*/
+/*}*/
+
+
+/*.animate_image {*/
+/*margin:0 auto;*/
+/*width:450px;*/
+/*height:281px;*/
+/*transition: background-image 1s ease-in-out;*/
+/*background-image:url("/img/jeden.jpg");*/
+/*}*/
+
+/*.animate_image:hover {*/
+/*background-image:url("/img/carnisana-tlo.jpg");*/
+/*}*/
 
 .absolute {
     position: absolute;
@@ -751,75 +789,3 @@ h2 img {
     right: 0;
     margin: auto;
 }
-
-
-@keyframes pulse {
-    0% {
-        opacity: 0.2;
-    }
-    /*20% {*/
-        /*opacity: 0.50;*/
-    /*}*/
-    /*90% {*/
-        /*opacity: 0.80;*/
-    /*}*/
-    100% {
-        opacity: 0.90;
-    }
-
-}
-
-/*@keyframes change_color*/
-/*{*/
-    /*0% { background-color:white; } !* 0% oznacza początek animacji *!*/
-    /*!*25% { background-color:gold; } !* 25% oznacza 3-cią sekundę, bo 25% z 12s, to 3s *!*!*/
-    /*50% { background-color:grey; } !* 50% oznacza 6-stą sekundę, bo 50% z 12s, to 6s *!*/
-    /*!*75% { background-color:green; } !* 75% oznacza 9-tą sekundę, bo 75% z 12s, to 9s *!*!*/
-    /*100% { background-color:white; } !* 100% oznacza koniec animacji *!*/
-/*}*/
-
-.courtain-fade {
-    /*display: none;*/
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 2;
-    background: white;
-    opacity: 0.9;
-    /*animation-name: pulse, change_color ;*/
-    /*animation-duration: 5s;*/
-    animation: pulse 5s;
-    /*animation: pulse 5s infinite, change_color 5s 5s infinite;*/
-}
-
-/***********************/
-/*STRONA PRODUKTY:*/
-
-#produkty .overlay img {
-    width: 20px;
-}
-
-.remove-transform {
-    /*transform: perspective(2500px) rotateY(0);*/
-    /*transform: perspective(2500px) rotateY(-100deg);*/
-    transform: none !important;
-}
-
-/*[data-aos=flip-left].aos-animate {*/
-     /*transform: perspective(2500px) rotateY(0);*/
-/*}*/
-
-/*[data-aos=flip-left] {*/
-    /*transform: perspective(2500px) rotateY(-100deg);*/
-/*}*/
-
-/*[data-aos=flip-right].aos-animate {*/
-    /*transform: perspective(2500px) rotateY(0);*/
-/*}*/
-
-/*[data-aos=flip-right] {*/
-    /*transform: perspective(2500px) rotateY(100deg);*/
-/*}*/
-
